# Mental-Math

./: .gitignore  CMakeLists.txt  README.md
Charts/: MME-userflow.drawio
include/engine/: SessionData.hpp  SessionManager.hpp  States.hpp
include/profile/: profile.hpp  profileRepo.hpp
include/questions/: DifficultyModel.hpp  QuestionGen.hpp  Questions.hpp
src/: main.cpp
src/engine/: SessionManager.cpp  States.cpp
src/profile/: profile.cpp  profileRepo.cpp
src/questions/: DifficultyModel.cpp  QuestionsGen.cpp
